[tool.poetry]
name = "scoringrules"
version = "0.4.0"
description = "Scoring rules for probabilistic forecast evaluation."
authors = [
  "Francesco Zanetta <zanetta.francesco@gmail.com>",
  "Sam Allen <sam.allen@unibe.ch>",
]
homepage = "https://github.com/frazane/scoringrules"
documentation = "https://frazane.github.io/scoringrules/"
keywords = ["probabilistic", "forecasting", "verification"]

[tool.poetry.urls]
"Homepage" = "https://github.com/frazane/scoringrules"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
numba = "^0.57.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.11"
mkdocstrings = { extras = ["python"], version = "^0.21.2" }
jupyter = "^1.0.0"
nbconvert = "7.3.1"
ipykernel = "6.22.0"
properscoring = "^0.1"
matplotlib = "^3.7.1"
mkdocs-bibtex = "^2.8.16"
mkdocs-section-index = "^0.3.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.265"
black = "^23.3.0"
pre-commit = "^3.3.1"
pytest = "^7.3.1"
mypy = "^1.3.0"
jax = { extras = ["cpu"], version = "^0.4.10" }
dask = "^2023.7.1"
xarray = "^2023.10.1"
torch = { version = ">=2.0.0, !=2.0.1, !=2.1.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ["py310"]
exclude = """
  (
    ^/foo.py
    | types.py
  )
"""

[tool.ruff]
fix = true
cache-dir = "~/.cache/ruff"
dummy-variable-rgx = "^_$"
exclude = ["docs/"]
ignore-init-module-imports = true
line-length = 88
select = [
  "D",   # docstrings
  "F",   # pyflakes
  "E",   # pycodestyle
  "I",
  "W",
  "YTT", # flake8-2020
  "B",   # flake8-bugbear
  "Q",   # flake8-quotes
  "PLE", # pylint
  "PLR",
  "PLW",
  "PIE", # misc lints
  "PYI", # flake8-pyi
  "TID", # tidy imports
  "ISC", # implicit string concatenation
  "TCH", # type-checking imports
]
ignore = [
  "D100",
  "D102",
  "D103",
  "D104",
  "D105",
  "D301",
  "E402",
  "E731",
  "E501",
  "PGH001",
  "RET504",
  "S101",
  "F722",
  "PLR2004",
  "PLR0913",
  "TCH004",
  "PLW0603",
]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]
src = ["scoringrules", "tests"]
target-version = "py310"

[tool.ruff.per-file-ignores]
"scoringrules/core/crps/_gufuncs.py" = ["PLW2901"]


[tool.ruff.pydocstyle]
convention = "numpy"


[tool.mypy]
follow_imports = "silent"
exclude = ['^third_party']
disable_error_code = [
  "empty-body",
  "no-any-return",
  "type-var",
  "index",
  "no-redef",
]

[tool.codespell]
skip = '*/functions.py'
