[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scoringrules"
version = "0.7.1"
description = "Scoring rules for probabilistic forecast evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.25.0",
    "scipy>=1.10.0",
]
authors = [
    {name = "Francesco Zanetta", email = "zanetta.francesco@gmail.com"},
    {name = "Sam Allen", email = "sam.allen@stat.math.ethz.ch"}
]
license = {file = "LICENSE"}
keywords = ["probabilistic", "forecasting", "verification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/frazane/scoringrules"
Documentation = "https://frazane.github.io/scoringrules"
Issues = "https://github.com/frazane/scoringrules/issues"

[project.optional-dependencies]
numba = [
    "numba>=0.60.0",
]
jax = [
    "jax>=0.4.31",
]
torch = [
    "torch>=2.4.1",
]
tensorflow = [
    "tensorflow>=2.17.0",
]

[tool.uv]
dev-dependencies = [
    "matplotlib>=3.9.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E741"]

[tool.coverage.run]
omit = ["**/_gufuncs.py", "**/_gufunc.py"]

[tool.coverage.report]
exclude_also = ["if tp.TYPE_CHECKING:"]
